--- a/PMLib-OutsideIn-Start-Specs/PMLib-OutsideIn-Start-Specs.csproj
+++ b/PMLib-OutsideIn-Start-Specs/PMLib-OutsideIn-Start-Specs.csproj
@@ -36,11 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
     <Reference Include="TechTalk.SpecFlow, Version=1.9.0.77, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SpecFlow.1.9.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
@@ -57,7 +53,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>lista_tomt_filmbibliotek.feature</DependentUpon>
     </Compile>
-    <Compile Include="Egenskaper\Steg\MovieCollectionSteps.cs" />
+    <Compile Include="Egenskaper\Steg\Filmbibliotekssteg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
